break out teambuilder component

--- a/src/app/tools/teambuilder/teambuilder.component.html
+++ b/src/app/tools/teambuilder/teambuilder.component.html
@@ -8,197 +8,5 @@ Teambuilder
   ></select-search>
 </div>
 @for (pokemon of team; track $index) {
-  <div>
-    <div class="w-8">
-      <sprite [pokemon]="{ id: pokemon.id, name: pokemon.name }"></sprite>
-    </div>
-    <div class="space-x-1">
-      <label for="ability">Ability</label>
-      <select-no-search
-        [items]="pokemon.abilities"
-        [placeholder]="'Select an ability'"
-        [startItem]="pokemon.ability"
-      ></select-no-search>
-    </div>
-    <div class="space-x-1">
-      <label for="item">Item</label>
-      <input [(ngModel)]="pokemon.item" id="item" class="border p-1" />
-    </div>
-    <div class="space-x-1">
-      <label for="tera">Tera Type</label>
-      <input [(ngModel)]="pokemon.teraType" id="tera" class="border p-1" />
-    </div>
-    <div class="space-x-1">
-      <label for="level">Level</label>
-      <input
-        [(ngModel)]="pokemon.level"
-        type="number"
-        min="1"
-        max="100"
-        id="level"
-        class="border p-1"
-      />
-    </div>
-    <div class="space-x-1">
-      <label for="nature">Nature</label>
-      <div id="nature" class="border max-w-96 w-full rounded">
-        <select-search
-          [items]="natures"
-          placeholder="Select a nature"
-          [startItem]="pokemon.nature"
-          (itemSelected)="pokemon.nature = $event ? $event : pokemon.nature"
-        ></select-search>
-      </div>
-    </div>
-    <div>
-      <label for="moves">Moves</label>
-      <div id="moves" class="flex flex-col space-y-1">
-        <div id="move1" class="border max-w-md w-full rounded">
-          <select-search
-            [items]="pokemon.getLearnset()"
-            [placeholder]="'Select a move'"
-            [headers]="[
-              {
-                name: 'Power',
-                value: 'basePower',
-                type: 'text',
-              },
-              {
-                name: 'Accuracy',
-                value: 'accuracy',
-                type: 'text',
-              },
-              {
-                name: 'Type',
-                value: 'typePath',
-                type: 'imgPath',
-              },
-              {
-                name: 'Category',
-                value: 'categoryPath',
-                type: 'imgPath',
-              },
-            ]"
-            (itemSelected)="pokemon.moves[0] = $event"
-          >
-          </select-search>
-        </div>
-        <div id="move2" class="border max-w-md w-full rounded">
-          <select-search
-            [items]="pokemon.getLearnset()"
-            [placeholder]="'Select a move'"
-            [headers]="[
-              {
-                name: 'Power',
-                value: 'basePower',
-                type: 'text',
-              },
-              {
-                name: 'Accuracy',
-                value: 'accuracy',
-                type: 'text',
-              },
-              {
-                name: 'Type',
-                value: 'typePath',
-                type: 'imgPath',
-              },
-              {
-                name: 'Category',
-                value: 'categoryPath',
-                type: 'imgPath',
-              },
-            ]"
-            (itemSelected)="pokemon.moves[1] = $event"
-          ></select-search>
-        </div>
-        <div id="move3" class="border max-w-md w-full rounded">
-          <select-search
-            [items]="pokemon.getLearnset()"
-            [placeholder]="'Select a move'"
-            [headers]="[
-              {
-                name: 'Power',
-                value: 'basePower',
-                type: 'text',
-              },
-              {
-                name: 'Accuracy',
-                value: 'accuracy',
-                type: 'text',
-              },
-              {
-                name: 'Type',
-                value: 'typePath',
-                type: 'imgPath',
-              },
-              {
-                name: 'Category',
-                value: 'categoryPath',
-                type: 'imgPath',
-              },
-            ]"
-            (itemSelected)="pokemon.moves[2] = $event"
-          ></select-search>
-        </div>
-        <div id="move4" class="border max-w-md w-full rounded">
-          <select-search
-            [items]="pokemon.getLearnset()"
-            [placeholder]="'Select a move'"
-            [headers]="[
-              {
-                name: 'Power',
-                value: 'basePower',
-                type: 'text',
-              },
-              {
-                name: 'Accuracy',
-                value: 'accuracy',
-                type: 'text',
-              },
-              {
-                name: 'Type',
-                value: 'typePath',
-                type: 'imgPath',
-              },
-              {
-                name: 'Category',
-                value: 'categoryPath',
-                type: 'imgPath',
-              },
-            ]"
-            (itemSelected)="pokemon.moves[3] = $event"
-          ></select-search>
-        </div>
-      </div>
-    </div>
-
-    <div>
-      @for (stat of stats; track $index) {
-        <label [for]="stat">{{ stat | uppercase }}</label>
-        <div [id]="stat" class="flex items-center">
-          <label [for]="stat + 'evs'">EVs</label>
-          <input
-            [(ngModel)]="pokemon.evs[stat]"
-            [id]="stat + 'evs'"
-            min="0"
-            max="252"
-            step="4"
-            type="number"
-            class="border p-1"
-          />
-          <label [for]="stat + 'ivs'">IVs</label>
-          <input
-            [(ngModel)]="pokemon.ivs[stat]"
-            [id]="stat + 'ivs'"
-            min="0"
-            max="31"
-            type="number"
-            class="border p-1"
-          />
-          <div>{{ pokemon.calcStat(stat) }}</div>
-        </div>
-      }
-    </div>
-  </div>
+  <teambuilder-pokemon [pokemon]="pokemon"></teambuilder-pokemon>
 }
