--- a/src/app/util/dropdowns/select/select-no-search.component.html
+++ b/src/app/util/dropdowns/select/select-no-search.component.html
@@ -30,12 +30,11 @@
           *cdkVirtualFor="let item of items"
           class="mx-1 rounded py-0.5 flex justify-between px-1 cursor-pointer hover:bg-menu-200"
           [ngClass]="{
-            'bg-menu-200': selectedItem && selectedItem.value === item.value
+            'bg-menu-200': selectedItem && selectedItem.value === item.value,
           }"
           (click)="selectItem(item)"
         >
           <span>{{ item.name }}</span>
-          <img class="aspect-auto" [src]="item.icon" />
         </div>
       </cdk-virtual-scroll-viewport>
     </div>
@@ -62,7 +61,7 @@
           *cdkVirtualFor="let item of items"
           class="mx-2 rounded py-0.5 px-1 cursor-pointer hover:bg-menu-200"
           [ngClass]="{
-            'bg-menu-200': selectedItem && selectedItem.value === item.value
+            'bg-menu-200': selectedItem && selectedItem.value === item.value,
           }"
           (click)="selectItem(item)"
         >
