--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -58,21 +58,9 @@
   );
 }
 
-.sprite-border {
-  -webkit-filter: drop-shadow(1px 0px 0 theme("colors.spriteBorder"))
-    drop-shadow(-1px 0px 0 theme("colors.spriteBorder"))
-    drop-shadow(0px -1px 0 theme("colors.spriteBorder"))
-    drop-shadow(0px 1px 0 theme("colors.spriteBorder"));
-  filter: drop-shadow(1px 0px 0 theme("colors.spriteBorder"))
-    drop-shadow(-1px 0px 0 theme("colors.spriteBorder"))
-    drop-shadow(0px -1px 0 theme("colors.spriteBorder"))
-    drop-shadow(0px 1px 0 theme("colors.spriteBorder"));
-  z-index: 0;
-}
-
 @font-face {
   font-family: "Nasalization RG";
-  src: url("./assets/fonts/nasalization-pd.otf") format("truetype");
+  src: url("../assets/fonts/nasalization-pd.otf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -160,7 +148,9 @@
     white-space: nowrap;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 0.2s, transform 0.2s;
+    transition:
+      opacity 0.2s,
+      transform 0.2s;
   }
 
   .tooltip:hover::after {
