--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -105,17 +105,17 @@
           </div>
           <div class="flex w-full">
             <div class="w-1/2 font-semibold text-center">
-              {{ matchupData.overview[0].teamName }}
+              {{ matchupData.summary[0].teamName }}
             </div>
             <div class="w-1/2 font-semibold text-center">
-              {{ matchupData.overview[1].teamName }}
+              {{ matchupData.summary[1].teamName }}
             </div>
           </div>
           <div class="flex divide-x-2">
             <div class="flex flex-row flex-wrap justify-end w-1/2 pr-2 h-fit">
               <div
                 class="relative w-1/3 sm:w-1/4"
-                *ngFor="let pokemon of matchupData.overview[0].team"
+                *ngFor="let pokemon of matchupData.summary[0].team"
               >
                 <sprite [pokemon]="pokemon" [flipped]="true"></sprite>
                 <tera-svg
@@ -134,7 +134,7 @@
             <div class="flex flex-wrap w-1/2 pl-2 h-fit">
               <div
                 class="relative w-1/3 sm:w-1/4"
-                *ngFor="let pokemon of matchupData.overview[1].team"
+                *ngFor="let pokemon of matchupData.summary[1].team"
               >
                 <sprite [pokemon]="pokemon"></sprite>
                 <tera-svg
