--- a/src/app/matchup-overview/matchup/matchup.component.html
+++ b/src/app/matchup-overview/matchup/matchup.component.html
@@ -2,16 +2,16 @@
   class="flex flex-wrap justify-center gap-4 p-4 text-xs"
   *ngIf="matchupData"
 >
-  <overview class="z-10" [teams]="matchupData.overview"></overview>
+  <overview class="z-10" [teams]="matchupData.summary"></overview>
   <summary
     class="z-10 max-w-full w-fit"
-    [teams]="matchupData.summary"
+    [summaries]="matchupData.summary"
     style="list-style: none"
   ></summary>
   <speedchart
     class="z-10"
     [speedchart]="matchupData.speedchart"
-    [speeds]="matchupData.overview"
+    [speeds]="matchupData.summary"
     [level]="matchupData.details.level"
   ></speedchart>
   <typechart
